--- a/workshop/content/nationalparks-dotnet.adoc
+++ b/workshop/content/nationalparks-dotnet.adoc
@@ -96,7 +96,11 @@ Enter the following for Git Repo URL:
 http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks-dotnet.git
 ----
 
-Select .NET Core as your Builder Image.
+In *Git Type* select *Other*.
+
+NOTE: if you copied the Gogs URL correctly (check spaces etc) and you still get a warning like 'URL is valid but cannot be reached' please ignore it at this time, since the UI may fail to ping the repo sometimes.
+
+Select *.NET Core* as your Builder Image.
 
 image::images/nationalparks-import-from-git-url-builder-dotnet.png[Import from Git]
 
@@ -154,7 +158,7 @@ After the build has completed and successfully:
 * The *Deployment* (D) will detect that the image has changed, and this
   will cause a new deployment to happen.
 * A *ReplicaSet* (RS) will be spawned for this new deployment.
-* The RC will detect no *Pods* are running and will cause one to be deployed, as our default replica count is just 1.
+* The RS will detect no *Pods* are running and will cause one to be deployed, as our default replica count is just 1.
 
 In the end, when issuing the `oc get pods` command, you will see that the build Pod
 has finished (exited) and that an application *Pod* is in a ready and running state:
@@ -203,7 +207,7 @@ You will see a simple JSON string:
 
 [source,json]
 ----
-{"id":"nationalparks","displayName":"National Parks","center":{"latitude":47.039304,"longitude":14.505178},"zoom":4}
+{"id":"nationalparks","displayName":"National Parks (C#)","center":{"latitude":47.039304,"longitude":14.505178},"zoom":4}
 ----
 
 Earlier we said:
