--- a/workshop/content/nationalparks-python.adoc
+++ b/workshop/content/nationalparks-python.adoc
@@ -98,6 +98,10 @@ Enter the following for Git Repo URL:
 http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks-py.git
 ----
 
+In *Git Type* select *Other*.
+
+NOTE: if you copied the Gogs URL correctly (check spaces etc) and you still get a warning like 'URL is valid but cannot be reached' please ignore it at this time, since the UI may fail to ping the repo sometimes.
+
 Select Python as your Builder Image.
 
 image::images/nationalparks-import-from-git-url-builder-py.png[Import from Git]
