--- a/workshop/content/nationalparks-java-pipeline.adoc
+++ b/workshop/content/nationalparks-java-pipeline.adoc
@@ -211,7 +211,7 @@ Add in *APP_GIT_URL* the `nationalparks` repository you have in Gogs:
 http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks.git
 ----
 
-In *Workspaces*-> *app-source* select *PVC* from the list, then select *app-source-pvc*. This is the share volume used by Pipeline Tasks in your Pipeline containing the source code and compiled artifacts.
+In *Workspaces*-> *app-source* select *PVC* from the list, then select *app-source-pvc*. This is the shared volume used by Pipeline Tasks in your Pipeline containing the source code and compiled artifacts.
 
 Click on *Start* to run your Pipeline.
 
