--- a/workshop/content/nationalparks-python.adoc
+++ b/workshop/content/nationalparks-python.adoc
@@ -102,7 +102,7 @@ In *Git Type* select *Other*.
 
 NOTE: if you copied the Gogs URL correctly (check spaces etc) and you still get a warning like 'URL is valid but cannot be reached' please ignore it at this time, since the UI may fail to ping the repo sometimes.
 
-Select Python as your Builder Image.
+Select *Python* as your Builder Image.
 
 image::images/nationalparks-import-from-git-url-builder-py.png[Import from Git]
 
